--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>D.M Cyber - आपकी सेवा, हमारी पहचान</title>
     
     <style>
-        :root { --primary: #001f3f; --accent: #ff851b; --bg: #f4f7f6; --success: #28a745; }
+        :root { --primary: #001f3f; --accent: #ff851b !important; --bg: #f4f7f6; --success: #28a745; }
         body { font-family: 'Segoe UI', Arial, sans-serif; margin: 0; background-color: var(--bg); color: #333; }
         
         /* एडमिन मोड */
@@ -247,3 +247,4 @@
 </script>
 </body>
 </html>
+
