Enhance SEO with new meta tags and title
Updated meta description and title for better SEO.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D.M Cyber - सेवा और विश्वास</title>
+    <meta name="description" content="D.M Cyber - वाराणसी का सबसे विश्वसनीय जन सेवा केंद्र। संचालक: धीरज मौर्या।">
+    <title>D.M Cyber - आपकी सेवा, हमारी पहचान</title>
     
     <style>
-        :root { --primary: #001f3f; --accent: #ff851b; --bg: #f4f7f6; --success: #28a745; --form: #0074d9; }
+        :root { --primary: #001f3f; --accent: #ff851b !important; --bg: #f4f7f6; --success: #28a745; }
         body { font-family: 'Segoe UI', sans-serif; margin: 0; background: var(--bg); color: #333; padding-bottom: 80px; }
         
         .editable-mode { border: 2px dashed #ff851b !important; background: #fff3e0 !important; outline: none !important; }
@@ -92,8 +93,8 @@
     </div>
 
     <div class="main-card">
-        <p>📍 <span id="addr" class="edit">Mandaw, Rohaniya, Varanasi</span></p>
-        <div class="btn-group">
+        <p>📍 <strong id="addr" class="editable">Mandaw, Rohaniya, Varanasi (221108)</strong></p>
+        <p>📧 <span id="email" class="editable">Dmvns6565@gmail.com</span> | 📞 <span id="mob" class="editable">8303585793</span></p>
             <a href="tel:8303585793" class="btn btn-call">📞 कॉल</a>
             <a href="https://wa.me/918303585793" class="btn btn-wa">💬 व्हाट्सप्प</a>
             <button onclick="togglePay()" class="btn btn-pay">💳 पेमेंट</button>
@@ -238,3 +239,4 @@
 
 </body>
 </html>
+
